# support

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose-study.yml  docker-compose-test.yml  docker-compose.yml
backend/: .env.example  .env.test.example  Dockerfile  ensure-certs.sh  entrypoint.sh  pyproject.toml  pytest.ini  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 010a01d03f0f_add_is_admin_for_users.py  05f1c89e8fba_users_and_users_sessions.py  0c59398facda_add_ticket_model.py  269ee275993e_add_ticket_message_model.py  39fabbc2a17c_change_id_from_int_to_bigint.py  a6280a7a879c_.py  b96a66d154fd_add_user_roles_enum.py
backend/app/: config.py  database.py  deps.py  errors.py  exception_handlers.py  logging_config.py  main.py  model_registry.py  models.py  repository.py  service.py  utils.py
backend/app/auth/: cookies.py  deps.py  errors.py  models.py  repository.py  router.py  schemas.py  service.py  utils.py
backend/app/tickets/: deps.py  errors.py  models.py  repository.py  router.py  schemas.py  service.py  utils.py  ws.py
backend/app/users/: deps.py  errors.py  models.py  repository.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  helpers.py  test_users.py
backend/tests/integration/: conftest.py  test_integration_auth.py  test_integration_user.py
backend/tests/unit/: test_routes_tickets.py  test_routes_users.py
frontend/: Dockerfile  vite.config.ts
frontend/src/: AllTicketsPage.module.css  AllTicketsPage.tsx  App.tsx  AuthPage.module.css  AuthPage.tsx  WebSocket.module.css  index.css  (+2 more)
(+2 files in other folders)
